--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "googleapis": "^159.0.0",
     "helmet": "^7.0.0",
     "lucide-react": "^0.539.0",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
@@ -26,7 +29,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.5.0",
+    "@types/node": "^20.19.13",
+    "@types/pdfkit": "^0.17.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
