--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "googleapis": "^159.0.0",
     "helmet": "^7.0.0",
-    "lucide-react": "^0.539.0",
+    "jsfinance-backend": "file:",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
-    "node-cron": "^4.2.1",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
